<resources>
    <string name="app_name">Android Nanodegree Project</string>
    <string name="action_settings">Settings</string>
    <string name="title_text">My Nanodegree Apps</string>
    <string name="spotify_streamer">SPOTIFY STREAMER</string>
    <string name="scores_app">SCORES APP</string>
    <string name="library_app">LIBRARY APP</string>
    <string name="build_it_bigger">BUILD IT BIGGER</string>
    <string name="xyz_reader">XYZ READER</string>
    <string name="my_own_app">CAPSTONE: MY OWN APP</string>
    <string name="title_activity_main2">Main2Activity</string>
</resources>
